--- a/index.html
+++ b/index.html
@@ -27,13 +27,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Dewi - v2.1.0
-  * Template URL: https://bootstrapmade.com/dewi-free-multi-purpose-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -42,9 +35,8 @@
   <header id="header" class="fixed-top ">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Angle IT Solutions</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a href="index.html" class="logo mx-auto"><img src="assets/img/Angel-IT-Solutions-logo.png" alt="" class="img-fluid"> Angle IT Solutions</a>
 
       <!-- <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -70,7 +62,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact</a></li> -->
+          <li><a href="#contact">Contact</a></li>
 
         </ul>
       </nav> -->
@@ -88,10 +80,10 @@
       <h2>We are team of talanted designers and developers making websites which makes your life easy.</h2>
       <div class="d-flex">
         <a href="#footer" class="btn-get-started scrollto">Contact Us</a>
-        <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox btn-watch-video" data-vbtype="video" data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a>
       </div>
     </div>
-  </section><!-- End Hero -->
+  </section>
+  <!-- End Hero -->
 
   <main id="main">
 
@@ -781,12 +773,14 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Dewi</h3>
+              <h3>Angle IT Solutions</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                G/84 Dhananjay Society, <br> 
+                Pooja Upavan2 Talwarkar Gym Building, <br>
+                B/H, Akota Stadium Rd,<br>
+                Akota, Vadodara, Gujarat 390022 <br><br>
+                <a href="tel:+919978197776"><strong>Phone:</strong> +91 9978 1977 76<br></a>
+                <!-- <strong>Email:</strong> info@example.com<br> -->
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -822,7 +816,7 @@
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <!-- <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p> -->
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
