updated meta tags

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Angel IT Solutions</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <meta content="caters to the customers ranging from startups to well established enterprises. Speaking of design and development of communication, it helps firms or businesses to engage with its stakeholders in real time and also businesses to reach out to its potential customers without any geographical constraints. As a result, IT services have emerged as a large segment in the service sector and offer brighter future prospects. Angel IT Solutions offers IT Solutions like Web Designing, App Designing, Graphics Designing, Digital Marketing, SEO etc. Angel IT Solutions also offers portfolio designing services for professionals, startups, career aspirants etc." name="descriptison">
+  <meta content=" Web Development, App Development, Digital Marketing, SEO, Graphics Designing, Digital Portfolio" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/Angel-IT-Solutions-logo.png" rel="icon">
