Updated Site Content

--- a/about.html
+++ b/about.html
@@ -149,11 +149,11 @@
             <div class="widget">
               <h3 class="widget-title">Services</h3>
               <ul class="list-unstyled">
-                <li><a href="#web" class="nocolor">Web Development</a></li>
-                <li><a href="#app" class="nocolor">App Development</a></li>
-                <li><a href="#dig" class="nocolor">Digital Marketing</a></li>
-                <li><a href="#gra" class="nocolor">Graphic Design</a></li>
-                <li><a href="#seo" class="nocolor">SEO</a></li>
+                <li><a href="services2.html#web" class="nocolor">Web Development</a></li>
+                <li><a href="services6.html#app" class="nocolor">App Development</a></li>
+                <li><a href="services5.html#dig" class="nocolor">Digital Marketing</a></li>
+                <li><a href="services3.html#gra" class="nocolor">Graphic Design</a></li>
+                <li><a href="services.html#seo" class="nocolor">SEO</a></li>
               </ul>
             </div>
             <!-- /.widget -->
