Updated Site Content

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                   </ul>
                 </li>                
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="about4.html" style="font-size: medium;">About Us</a></li>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="about.html" style="font-size: medium;">About Us</a></li>
             <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="contact.html" style="font-size: medium;">Contact Us</a></li>
           </ul>
           <!-- /.navbar-nav -->
