Updated Site Content

--- a/services.html
+++ b/services.html
@@ -104,17 +104,17 @@
       <a href="services3.html#gra"><button class="btn btn-primary btn-md">Graphic Design</button></a>
     </div>
 
-    <div class="wrapper dark-wrapper inverse-text">
+    <!-- <div class="wrapper dark-wrapper inverse-text">
       <div class="container inner text-center">
         <h2 class="title-color color-white text-center">Our Pricing</h2>
         <h3 class="display-3 mb-0">We offer great prices, premium products <br class="d-none d-lg-block" />and quality service for your business.</h3>
-      </div>
+      </div> -->
       <!-- /.container -->
-      <div class="space160"></div>
-    </div>
+      <!-- <div class="space160"></div>
+    </div> -->
     <!-- /.wrapper -->
     
-    <div class="space80"></div>
+    <!-- <div class="space80"></div>
     <div class="wrapper overflow-top">
       <div class="container inner pt-0 pb-30">
         <div class="pricing-wrapper">
@@ -126,12 +126,12 @@
                   <div class="icon icon-svg mb-10"><img src="style/images/icons/ec-mobile.png" alt=""></div>                  
                   <h4 class="panel-title mb-35">E-Commerce Website</h4>
                   <div class="prices color-dark">
-                    <!-- <div class="price price-show"><span class="price-currency">$</span><span class="price-value"></span> <span class="price-duration">month</span></div> -->
-                    <!-- <div class="price price-hide price-hidden"><span class="price-currency">$</span><span class="price-value">99</span> <span class="price-duration">year</span></div> -->
+                    <div class="price price-show"><span class="price-currency">$</span><span class="price-value"></span> <span class="price-duration">month</span></div>
+                    <div class="price price-hide price-hidden"><span class="price-currency">$</span><span class="price-value">99</span> <span class="price-duration">year</span></div>
                   </div>
-                </div>
+                </div> -->
                 <!--/.panel-heading -->
-                  <div class="panel-body">
+                  <!-- <div class="panel-body">
                     <ul class="table">
                       <li>
                         First <strong>2 years</strong> domain registration Project 
@@ -152,26 +152,26 @@
                         Easy to use admin panel for <strong>store management</strong>
                       </li>
                     </ul>
-                  </div>
+                  </div> -->
                 <!--/.panel-body -->
-                <div class="panel-footer"> <a href="#" class="btn" role="button">Choose Plan</a></div>
-              </div>
+                <!-- <div class="panel-footer"> <a href="#" class="btn" role="button">Choose Plan</a></div>
+              </div> -->
               <!--/.pricing -->
-            </div>
+            <!-- </div> -->
             <!--/column -->
             
-            <div class="col-md-4 popular" style="margin-top: -2.5em;">
+            <!-- <div class="col-md-4 popular" style="margin-top: -2.5em;">
               <div class="pricing panel box bg-white shadow">
                 <div class="panel-heading">
                   <div class="icon icon-svg mb-10"><img src="style/images/icons/ec-store.png" alt=""></div>
                   <h4 class="panel-title mb-5">E-Commerce Website + SEO + SMO</h4>
                   <div class="prices color-dark">
-                    <!-- <div class="price price-show"><span class="price-currency">$</span><span class="price-value"></span> <span class="price-duration">month</span></div> -->
-                    <!-- <div class="price price-hide price-hidden"><span class="price-currency">$</span><span class="price-value">499</span> <span class="price-duration">year</span></div> -->
+                    <div class="price price-show"><span class="price-currency">$</span><span class="price-value"></span> <span class="price-duration">month</span></div>
+                    <div class="price price-hide price-hidden"><span class="price-currency">$</span><span class="price-value">499</span> <span class="price-duration">year</span></div>
                   </div>
-                </div>
+                </div> -->
                 <!--/.panel-heading -->
-                <div class="panel-body">
+                <!-- <div class="panel-body">
                   <ul class="table">                      
                       <li style="font-size: 1.2em; padding-bottom: 1em;">
                         All benefits of <strong> E-Commerce Website </strong> & <strong>E-Commerce Website + SEO  (Recommended)</strong> +
@@ -189,25 +189,25 @@
                         4 Info-graphic posts per month on social media platform
                       </li>
                     </ul>
-                </div>
+                </div> -->
                 <!--/.panel-body -->
-                <div class="panel-footer"> <a href="#" class="btn" role="button">Choose Plan</a></div>
-              </div>
+                <!-- <div class="panel-footer"> <a href="#" class="btn" role="button">Choose Plan</a></div>
+              </div> -->
               <!--/.pricing -->
-            </div>
+            <!-- </div> -->
             <!--/column -->
-            <div class="col-md-4 ">
+            <!-- <div class="col-md-4 ">
               <div class="pricing panel box bg-white shadow">
                 <div class="panel-heading">
                   <div class="icon icon-svg mb-10"><img src="style/images/icons/ec-online-shop.png" alt=""></div>
                   <h4 class="panel-title mb-5">E-Commerce Website + SEO  (Recommended)</h4>
                   <div class="prices color-dark">
-                    <!-- <div class="price price-show"><span class="price-currency">$</span><span class="price-value"></span> <span class="price-duration">month</span></div> -->
-                    <!-- <div class="price price-hide price-hidden"><span class="price-currency">$</span><span class="price-value">199</span> <span class="price-duration">year</span></div> -->
+                    <div class="price price-show"><span class="price-currency">$</span><span class="price-value"></span> <span class="price-duration">month</span></div>
+                    <div class="price price-hide price-hidden"><span class="price-currency">$</span><span class="price-value">199</span> <span class="price-duration">year</span></div>
                   </div>
-                </div>
+                </div> -->
                 <!--/.panel-heading -->
-                <div class="panel-body">
+                <!-- <div class="panel-body">
                   <ul class="table">
                       <li style="font-size: 1.5em; padding-bottom: 1em;">
                         All benefits of <strong> E-Commerce Website</strong> +
@@ -228,16 +228,16 @@
                         Google Analytics access for website visits
                       </li>
                     </ul>
-                </div>
+                </div> -->
                 <!--/.panel-body -->
-                <div class="panel-footer"> <a href="#" class="btn" role="button">Choose Plan</a></div>
-              </div>
+                <!-- <div class="panel-footer"> <a href="#" class="btn" role="button">Choose Plan</a></div>
+              </div> -->
               <!--/.pricing -->
-            </div>
+            <!-- </div> -->
             <!--/column -->
-          </div>
+          <!-- </div> -->
           <!--/.row -->
-        </div>
+        <!-- </div> -->
         <!--/.pricing-wrapper -->
         <div class="space160"></div>    
     <div class="wrapper image-wrapper bg-auto no-overlay bg-image text-center" data-image-src="style/images/art/map.png">
