Updated Site content

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                       <div class="blockquote-details justify-content-center">
                         
                         <div class="info">
-                          <h4 class="">- Tirth</h4>
+                          <h4 class="">- Dharmesh Chauhan</h4>
                           
                         </div>
                       </div>
