--- a/services.html
+++ b/services.html
@@ -73,7 +73,7 @@
           <!-- /column -->
         </div>
         <!-- /.row -->
-          <div class="container" id="app">
+          <div class="container" id="seo">
         <div class="row align-items-center">
           <div class="col-lg-12 pl-60 pl-md-15 mt-4">
             <h1 style="font-size: 3.0em; text-align: center; margin-bottom: 0.5em;">SEO</h1>
@@ -274,7 +274,7 @@
             <div class="col-md-4 col-lg-3">
               <div class="widget">
                 <h3 class="widget-title">Get in Touch</h3><address>G/84 Dhananjay Society, Pooja Upavan2 Talwarkar Gym Building,<br class="d-none d-lg-block" />B/H, Akota Stadium Rd, Akota, Vadodara, Gujarat 390022<br class="d-none d-lg-block" /></address>
-                <a href="mailto:support@ninetech.com.au">support@ninetech.com.au</a><br/> <a href="tel:+91 9978 1977 76">+91 9978 1977 76</a>
+                <a href="mailto:support@angelitsolutions.co.in">support@angelitsolutions.co.in</a><br/> <a href="tel:+91 9978 1977 76">+91 9978 1977 76</a>
               </div>
               <!-- /.widget -->
             </div>
