--- a/services5.html
+++ b/services5.html
@@ -267,7 +267,7 @@
             <div class="col-md-4 col-lg-3">
               <div class="widget">
                 <h3 class="widget-title">Get in Touch</h3><address>G/84 Dhananjay Society, Pooja Upavan2 Talwarkar Gym Building,<br class="d-none d-lg-block" />B/H, Akota Stadium Rd, Akota, Vadodara, Gujarat 390022<br class="d-none d-lg-block" /></address>
-                <a href="mailto:support@ninetech.com.au">support@ninetech.com.au</a><br/> <a href="tel:+91 9978 1977 76">+91 9978 1977 76</a>
+                <a href="mailto:support@angelitsolutions.co.in">support@angelitsolutions.co.in</a><br/> <a href="tel:+91 9978 1977 76">+91 9978 1977 76</a>
               </div>
               <!-- /.widget -->
             </div>
@@ -277,10 +277,10 @@
                 <h3 class="widget-title">Services</h3>
                 <ul class="list-unstyled">
                   <li><a href="#web" class="nocolor">Web Development</a></li>
-                  <li><a href="#dig" class="nocolor">Digital Marketing</a></li>
-                  <li><a href="#app" class="nocolor">App Development</a></li>                  
-                  <li><a href="#gra" class="nocolor">Graphic Design</a></li>
-                  <li><a href="#seo" class="nocolor">SEO</a></li>
+                  <li><a href="services6.html#app" class="nocolor">App Development</a></li>
+                  <li><a href="services5.html#dig" class="nocolor">Digital Marketing</a></li>
+                  <li><a href="services3.html#gra" class="nocolor">Graphic Design</a></li>
+                  <li><a href="services.html#seo" class="nocolor">SEO</a></li>
                 </ul>
               </div>
               <!-- /.widget -->
