Updated Site Content

--- a/contact.html
+++ b/contact.html
@@ -37,16 +37,22 @@
             <li class="nav-item"><a class="nav-link" href="index.html"  style="font-size: medium;">Home</a></li>
             <li class="nav-item dropdown"><a class="nav-link dropdown-toggle dropdown-item" href="#!" style="font-size: medium;">Services</a>
              <ul class="dropdown-menu">
-                    <li class="nav-item"><a class="dropdown-item" href="#">Web Development</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="#">App Development</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="#">Digital Marketing</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="#">Graphic Design</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="#">SEO</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="services2.html#web">Web Development</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="services6.html#app">App Development</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="services5.html#dig">Digital Marketing</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="services3.html#gra">Graphic Design</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="services.html#seo">SEO</a></li>
                   </ul>
                 </li>                
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="about.html" style="font-size: medium;">About Us</a></li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#!" style="font-size: medium;">Contact Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html" style="font-size: medium;">About Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html" style="font-size: medium;">Contact Us</a></li>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle dropdown-item" href="#!" style="font-size: medium;">Career</a>
+              <ul class="dropdown-menu">
+                <li class="nav-item"><a class="dropdown-item" href="Career.html">Career Opportunities</a></li>
+              </ul>
+            </li>                
+             </li>
           </ul>
           <!-- /.navbar-nav -->
         </div>
@@ -97,7 +103,7 @@
       <div class="container inner text-center">
         <div class="space90"></div>
         <h1 class="page-title">Contact Us</h1>
-        <p class="lead" style="font-size: 1.2em;">Want to get in touch? We'd like to hear from you. Here's how you can reach us...</p>
+        <p class="lead" style="font-size: 1.5em;">Want to get in touch? We'd like to hear from you. Here's how you can reach us...</p>
       </div>
       <!-- /.container -->
     </div>
@@ -179,7 +185,7 @@
               </div>
               <div>
                 <h6 class="mb-5">Phone</h6>
-                <a href="tel:+91 9978197776" style="font-weight: 500;"><p>+91 9978 1977 76</p></a>
+                <a href="tel:+91 9978197776" style="font-weight: 500;"><p>+91 99781 97776</p></a>
               </div>
             </div>
             <div class="d-flex flex-row">
@@ -199,6 +205,8 @@
       <!-- /.container -->
     </div>
     <!-- /.wrapper -->
+    <div id="map-canvas" class="map-warp" style="height: 360px;"></div>
+    <div class="space100"></div>
     <footer class="dark-wrapper inverse-text">
       <div class="container inner">
         <div class="row">
@@ -279,6 +287,8 @@
   <script src="style/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
   <script src="style/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
   <script src="style/revolution/js/extensions/revolution.extension.video.min.js"></script>
+  <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyCguI75AX4xBwgdINTLe6X7_pbGBnNjAUM&callback=initMap'></script>  
+  <script src="style/js/contact.js"></script>
   <script src="style/js/plugins.js"></script>
   <script src="style/js/scripts.js"></script>
 </body>
