--- a/about.html
+++ b/about.html
@@ -37,16 +37,22 @@
             <li class="nav-item"><a class="nav-link" href="index.html"  style="font-size: medium;">Home</a></li>
             <li class="nav-item dropdown"><a class="nav-link dropdown-toggle dropdown-item" href="#!" style="font-size: medium;">Services</a>
              <ul class="dropdown-menu">
-                    <li class="nav-item"><a class="dropdown-item" href="#">Web Development</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="#">App Development</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="#">Digital Marketing</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="#">Graphic Design</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="#">SEO</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="services2.html#web">Web Development</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="services6.html#app">App Development</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="services5.html#dig">Digital Marketing</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="services3.html#gra">Graphic Design</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="services.html#seo">SEO</a></li>
                   </ul>
                 </li>                
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="about.html" style="font-size: medium;">About Us</a></li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="contact.html" style="font-size: medium;">Contact Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html" style="font-size: medium;">About Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html" style="font-size: medium;">Contact Us</a></li>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle dropdown-item" href="#!" style="font-size: medium;">Career</a>
+              <ul class="dropdown-menu">
+                <li class="nav-item"><a class="dropdown-item" href="Career.html">Career Opportunities</a></li>
+              </ul>
+            </li>                
+             </li>
           </ul>
           <!-- /.navbar-nav -->
         </div>
