--- a/services2.html
+++ b/services2.html
@@ -74,7 +74,7 @@
       <div class="container inner pt-0">
         <div class="row">
           <div class="col-lg-12 col-md-12 offset-lg-1 text-center">
-            <div style="margin-top: 3em; margin-left: -10em;"> <img src="style/images/web_dev.png" alt="" width="60%;"> </div>
+            <div style="margin-top: 3em;"> <img src="style/images/web_dev.png" alt="" width="60%;"> </div>
           </div>
           <!-- /column -->
         </div>
@@ -82,7 +82,7 @@
           <div class="container" id="web">
         <div class="row align-items-center">
           <div class="col-lg-12 pl-60 pl-md-15 mt-4">
-            <h1 style="font-size: 3.0em; text-align: center; margin-bottom: 0.5em;">Web Development </h1>
+            <h1 style="font-size: 2.5em; text-align: center; margin-bottom: 0.5em;">Web Development </h1>
             <p style="border-bottom: 2px solid purple;"></p>
             <h5 class="display-3" style="margin-top: 1em;">We serve the best web solutions with accurate results.</h5>
             <div class="space20"></div>
