--- a/services3.html
+++ b/services3.html
@@ -74,7 +74,7 @@
       <div class="container inner pt-0">
         <div class="row">
           <div class="col-lg-12 col-md-12 offset-lg-1 text-center">
-            <div style="margin-top: 3em; margin-left: -10em;"> <img src="style/images/undraw_design_tools_42tf-removebg-preview.png" alt="" width="50%;"> </div>
+            <div style="margin-top: 3em;"> <img src="style/images/undraw_design_tools_42tf-removebg-preview.png" alt="" width="50%;"> </div>
           </div>
           <!-- /column -->
         </div>
