--- a/services6.html
+++ b/services6.html
@@ -77,7 +77,7 @@
       <div class="container inner pt-0">
         <div class="row">
           <div class="col-lg-12 col-md-12 offset-lg-1 text-center">
-            <div style="margin-top: 3em; margin-left: -10em;"> <img src="style/images/undraw_my_app_re_gxtj-removebg-preview.png" alt="" width="50%;"> </div>
+            <div style="margin-top: 3em;"> <img src="style/images/undraw_my_app_re_gxtj-removebg-preview.png" alt="" width="50%;"> </div>
           </div>
           <!-- /column -->
         </div>
@@ -85,7 +85,7 @@
           <div class="container" id="app">
         <div class="row align-items-center">
           <div class="col-lg-12 pl-60 pl-md-15 mt-4">
-            <h1 style="font-size: 3.0em; text-align: center; margin-bottom: 0.5em;">App Development </h1>
+            <h1 style="font-size: 2.5em; text-align: center; margin-bottom: 0.5em;">App Development </h1>
             <p style="border-bottom: 2px solid purple;"></p>
             <h5 class="display-3" style="margin-top: 1em;">We provide the ultimate mobile app solutions.</h5>
             <div class="space20"></div>
