Updated Site Content

--- a/index.html
+++ b/index.html
@@ -314,8 +314,9 @@
             <div class="widget">
               <a href="index.html">
               <img src="#" srcset="style/images/logo.png 1x, style/images/logo.png 2x" alt="" style="width: 7em;"/></a>
-              <div class="space40"></div>
+              <div class="space20"></div>
               <p>© 2020 <a href="index.html" style="font-weight: bolder;">Angle IT Solutions.</a><br class="d-none d-lg-block" />All rights reserved.</p>
+              <a href="privacy.html" style="font-weight: bolder;">Privacy Policy.</a>
             </div>
             <!-- /.widget -->
           </div>
@@ -324,6 +325,7 @@
             <div class="widget">
               <h3 class="widget-title">Get in Touch</h3><address>G/84 Dhananjay Society, Pooja Upavan2 Talwarkar Gym Building,<br class="d-none d-lg-block" />B/H, Akota Stadium Rd, Akota, Vadodara, Gujarat 390022<br class="d-none d-lg-block" /></address>
               <a href="mailto:support@angelitsolutions.co.in">support@angelitsolutions.co.in</a><br/> <a href="tel:+91 9978197776">+91 9978 1977 76</a>
+              
             </div>
             <!-- /.widget -->
           </div>
