--- a/services6.html
+++ b/services6.html
@@ -274,8 +274,9 @@
               <div class="widget">
                 <a href="index.html">
                 <img src="#" srcset="style/images/logo.png 1x, style/images/logo.png 2x" alt="" style="width: 7em;"/></a>
-                <div class="space40"></div>
+                <div class="space20"></div>
                 <p>© 2020 <a href="index.html" style="font-weight: bolder;">Angle IT Solutions.</a><br class="d-none d-lg-block" />All rights reserved.</p>
+                <a href="privacy.html" style="font-weight: bolder;">Privacy Policy.</a>
               </div>
               <!-- /.widget -->
             </div>
