--- a/contact.html
+++ b/contact.html
@@ -185,7 +185,7 @@
               </div>
               <div>
                 <h6 class="mb-5">Phone</h6>
-                <a href="tel:+91 9978197776" style="font-weight: 500;"><p>+91 99781 97776</p></a>
+                <a href="tel:+91 9978197776" style="font-weight: 500;"><p>+91 9712237777</p></a>
               </div>
             </div>
             <div class="d-flex flex-row">
