--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
           <div class="col-md-4 col-lg-3">
             <div class="widget">
               <h3 class="widget-title">Get in Touch</h3><address>,<br class="d-none d-lg-block" /> Vadodara, Gujarat<br class="d-none d-lg-block" /></address>
-              <a href="mailto:support@angelitsolutions.co.in">support@angelitsolutions.co.in</a><br/> <a href="tel:+91 9712237777">+91 9978 1977 76</a>
+              <a href="mailto:support@angelitsolutions.co.in">support@angelitsolutions.co.in</a><br/> <a href="tel:+91 9712237777">+91 9712237777</a>
               
             </div>
             <!-- /.widget -->
