--- a/contact.html
+++ b/contact.html
@@ -175,8 +175,8 @@
               </div>
               <div>
                 <h6 class="mb-5">Address</h6>
-                <address>G/84 Dhananjay Society, <br> Pooja Upavan2 Talwarkar Gym Building,
-                  <br class="d-none d-md-block" />B/H Akota Stadium Rd, Akota, <br> Vadodara, Gujarat.</address>
+                <address>Vadodara, <br> Gujarat,
+                  <br class="d-none d-md-block" />B/H India.</address>
               </div>
             </div>
             <div class="d-flex flex-row">
@@ -223,8 +223,8 @@
           <!-- /column -->
           <div class="col-md-4 col-lg-3">
             <div class="widget">
-              <h3 class="widget-title">Get in Touch</h3><address>G/84 Dhananjay Society, Pooja Upavan2 Talwarkar Gym Building,<br class="d-none d-lg-block" />B/H, Akota Stadium Rd, Akota, Vadodara, Gujarat 390022<br class="d-none d-lg-block" /></address>
-              <a href="mailto:support@angelitsolutions.co.in">support@angelitsolutions.co.in</a><br/> <a href="tel:+91 9978 1977 76">+91 9978 1977 76</a>
+              <h3 class="widget-title">Get in Touch</h3><address>Vadodara, Gujarat,<br class="d-none d-lg-block" />India.<br class="d-none d-lg-block" /></address>
+              <a href="mailto:support@angelitsolutions.co.in">support@angelitsolutions.co.in</a><br/> <a href="tel:+91 9712237777">+91 9712237777</a>
             </div>
             <!-- /.widget -->
           </div>
