--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
           <div class="space30 d-none d-md-block d-lg-none"></div>
           <div class="col-lg-6 pr-60 pr-md-15">
             <h2 class="section-title">About Us</h2>
-            <p>Founded in September of 2020 and based in India. Angle IT Solutions provides an affordable, effective web application for the clients throughout India. <br>
+            <p>Founded in September of 2018 and based in India. Angle IT Solutions provides an affordable, effective web application for the clients throughout India. <br>
               Whether a Website Design, Mobile Application, Digital Marketing, Social Media Marketing Angle IT Solutions is there for you.</p>
             <div class="space20"></div>
             <ul class="progress-list">
@@ -146,8 +146,8 @@
           <!-- /column -->
           <div class="col-md-4 col-lg-3">
             <div class="widget">
-              <h3 class="widget-title">Get in Touch</h3><address>G/84 Dhananjay Society, Pooja Upavan2 Talwarkar Gym Building,<br class="d-none d-lg-block" />B/H, Akota Stadium Rd, Akota, Vadodara, Gujarat 390022<br class="d-none d-lg-block" /></address>
-              <a href="mailto:support@angelitsolutions.co.in">support@angelitsolutions.co.in</a><br/> <a href="tel:+91 9978 1977 76">+91 9978 1977 76</a>
+              <h3 class="widget-title">Get in Touch</h3><address>Vadodara,Gujarat<br class="d-none d-lg-block" />India.<br class="d-none d-lg-block" /></address>
+              <a href="mailto:support@angelitsolutions.co.in">support@angelitsolutions.co.in</a><br/> <a href="tel:+91 9712237777">+91 9712237777</a>
             </div>
             <!-- /.widget -->
           </div>
