--- a/services6.html
+++ b/services6.html
@@ -283,8 +283,8 @@
             <!-- /column -->
             <div class="col-md-4 col-lg-3">
               <div class="widget">
-                <h3 class="widget-title">Get in Touch</h3><address>G/84 Dhananjay Society, Pooja Upavan2 Talwarkar Gym Building,<br class="d-none d-lg-block" />B/H, Akota Stadium Rd, Akota, Vadodara, Gujarat 390022<br class="d-none d-lg-block" /></address>
-                <a href="mailto:support@angelitsolutions.co.in">support@angelitsolutions.co.in</a><br/> <a href="tel:+91 9978 1977 76">+91 9978 1977 76</a>
+                <h3 class="widget-title">Get in Touch</h3><address>Vadodara, Gujarat,<br class="d-none d-lg-block" />India.<br class="d-none d-lg-block" /></address>
+                <a href="mailto:support@angelitsolutions.co.in">support@angelitsolutions.co.in</a><br/> <a href="tel:+91 9712237777">+91 9712237777</a>
               </div>
               <!-- /.widget -->
             </div>
